# NexerArbetsprov

./: .gitignore  CMakeLists.txt  build.bat  clear.bat  main.cpp
conan/: conanfile.py
src/: CMakeLists.txt
src/solutions/: CMakeLists.txt  GeorgesCheesePizza.cpp  GeorgesCheesePizza.h  PersFactorial.cpp  PersFactorial.h  PlayFair.cpp  PlayFair.h
src/utils/: CMakeLists.txt  utils.cpp  utils.h
test/: CMakeLists.txt  test_main.cpp  test_solutions.cpp
